# Qt-Color-Widgets

./: CMakeLists.txt
qt-color-widgets/: abstract_widget_list.hpp  bound_color_selector.hpp  color_2d_slider.hpp  color_delegate.hpp  color_dialog.hpp  color_line_edit.hpp  color_list_widget.hpp  color_palette.hpp  color_preview.hpp  color_selector.hpp  color_wheel.hpp  gradient_slider.hpp  hue_slider.hpp
